fix (Tile): Remove overflow: hidden and add div to prevent overlapping border (#1442)
Updated Tile css to not include overflow:hidden but wrap button in div which prevents border overlap

--- a/data/csswhat/oui.css
+++ b/data/csswhat/oui.css
@@ -6725,8 +6725,7 @@ code {
   max-height: 72px;
   background-color: white;
   border-radius: 5px;
-  border: 1px solid #e0e0e0;
-  overflow-y: hidden; }
+  border: 1px solid #e0e0e0; }
   .oui-tile:hover {
     border: solid 1px #4069FF; }
   .oui-tile--selected {
